# SENSE-I

./: .gitignore  DHT22.glb  ESTUFA.glb  INTERNO.glb  LICENSE  README.md
dmie/: board.py
dmie/static/: pwa.js  script.js  service-worker.js  style.css
dmie/static/auth/: style-auth.css
dmie/static/board/: board-orion.js  board-sth.js  board1.js  style.css
dmie/templates/: base.html
dmie/templates/auth/: login.html  register.html
dmie/templates/board/: about.html  dashboard.html  guest.html
hardware/: Funcionamento.c  Instruções para Funcionamento.md
mobile/: App.js  app.config.js  app.json  eas.json  metro.config.js  package-lock.json  package.json
mobile/context/: store.js
mobile/context/actions/: deviceActions.js  experimentActions.js
mobile/context/reducers/: deviceReducer.js  experimentReducer.js  index.js
mobile/src/components/: CustomModal.js  CustomTimePicker.js  EstufaBottomSheetComponent.js  EstufaModel.js  ExperimentBottomSheetComponent.js  ExperimentModal.js  estufa.js  (+3 more)
modelos/: CAIXA.glb  TAMPA.glb
tests/: test_db.py  test_factory.py
web/: Dockerfile.dockerfile  pyproject.toml  requirements.txt
web/dmie/: __init__.py  auth.py  blog.py  board.py  dataMonitoringServer.py  downloadGraphHandler.py  notificationHandler.py  schema.sql
web/dmie/static/: manifest.json  script.js
web/dmie/static/board/: board-orion.js  board-sth.js  style.css
web/dmie/templates/: base.html
web/dmie/templates/auth/: register.html
web/dmie/templates/board/: about.html  dashboard.html  guest.html
web/tests/: conftest.py  test_auth.py  test_blog.py
(+13 files in other folders)
